--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,6 @@
 # Where is our Arduino distribution located.
-arduino-home=/Applications/Arduino.app/Contents/Resources/Java
+#arduino-home=/Applications/Arduino.app/Contents/Resources/Java
+arduino-home=/usr/local/arduino-1.0.5
 
 # Our sketch output path.
 dist.path=/usr/local/sketches
